--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>RoboKingsCosmosps3 HAN mirror</h1>
 <p>So.. regarding the ps3xploit website being taken down by Sony twice. This might be your only way of activating HAN so here's the links. Please note credit goes to the PS3xploit team and these are gpl licensed</p>
-<p>If you want HAN you can <a href="/hfw/han/han_installer.html">Install HAN</a> and href="/adv.html">Advanced</a></p>
+<p>If you want HAN you can <a href="/hfw/han/han_installer.html">Install HAN</a> and <a href="/adv.html">Advanced</a></p>
 <p>The rest of the tools below</p>
 <p><a href="/hfw/han/han_enabler.html">Enable HAN</a></p>
 <p><a href="/hfw/han/actidps_dumper.html">Act/IDPS Dumper</a></p>
