Add HEN as well (explained in desc)
It appears that Coro's repo doesn't have the han mount flash so i'll upload it here and update the index so that you guys can try HEN alongside HAN. But first I will test it to make sure it is in working condition.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>RoboKingsCosmosps3 HAN mirror</title>
+<title>RoboKingsCosmosps3 HAN/HEN mirror</title>
 </head>
 <body>
 
-<h1>RoboKingsCosmosps3 HAN mirror</h1>
-<p>if you want HEN too make sure to go to <a href="https://ps3addict.github.io">Coros Github</a></p>
+<h1>RoboKingsCosmosps3 HAN/HEN mirror</h1>
+<p>if you want HEN too make sure you <a href="/hfw/hen/han_flash_mount_rewrite.html">Mount flash</a> first then install <a href="/hfw/hen/Latest_HEN_Installer_3.1.1_signed-489C.pkg">Hen Pkg</a></p>
 <p>So.. regarding the ps3xploit website being taken down by Sony twice. This might be your only way of activating HAN so here's the links. Please note credit goes to the PS3xploit team and these are gpl licensed</p>
 <p>If you want HAN you can <a href="/hfw/han/han_installer.html">Install HAN</a> and <a href="/adv.html">Advanced</a></p>
 <p>The rest of the tools below</p>
