--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p><a href="/hfw/han/dbgpkg_enabler.html">Debug PKG Enabler</a></p>
 <p><a href="/han_supportfiles.zip">HAN support files</a></p>
 <p><a href="/HAN_489_Fix_272p_480p_Resolutions_signed.pkg">HAN FIX for 480p and lower</a></p>
-<p>And also if you want to dump your flash then these might help</p>
+<p>And also if you want to dump your flash then these might help note: only FAT PS3s up to CECHG and eMMC superslims are NAND if you have 12GB of memory then it is eMMC anything else is a NOR</p>
 <p><a href="/hfw/dumper/index_nand.html">Dump NAND/eMMC to USB</a></p>
 <p><a href="/hfw/dumper/index_nand_hdd.html">Dump NAND/eMMC to HDD</a></p>
 <p><a href="/hfw/dumper/index_nor.html">Dump NOR to USB</a></p>
